// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`action-badges /:owner/:repo returns an "error" badge on errors 1`] = `
"<svg width=\\"74.2\\" height=\\"20\\" viewBox=\\"0 0 742 200\\" xmlns=\\"http://www.w3.org/2000/svg\\">
  <linearGradient id=\\"a\\" x2=\\"0\\" y2=\\"100%\\">
    <stop offset=\\"0\\" stop-opacity=\\".1\\" stop-color=\\"#EEE\\"/>
    <stop offset=\\"1\\" stop-opacity=\\".1\\"/>
  </linearGradient>
  <mask id=\\"m\\"><rect width=\\"742\\" height=\\"200\\" rx=\\"30\\" fill=\\"#FFF\\"/></mask>
  <g mask=\\"url(#m)\\">
    <rect width=\\"368\\" height=\\"200\\" fill=\\"#555\\"/>
    <rect width=\\"374\\" height=\\"200\\" fill=\\"#E43\\" x=\\"368\\"/>
    <rect width=\\"742\\" height=\\"200\\" fill=\\"url(#a)\\"/>
  </g>
  <g fill=\\"#fff\\" text-anchor=\\"start\\" font-family=\\"Verdana,DejaVu Sans,sans-serif\\" font-size=\\"110\\">
    <text x=\\"60\\" y=\\"148\\" textLength=\\"268\\" fill=\\"#000\\" opacity=\\"0.25\\">build</text>
    <text x=\\"50\\" y=\\"138\\" textLength=\\"268\\">build</text>
    <text x=\\"423\\" y=\\"148\\" textLength=\\"274\\" fill=\\"#000\\" opacity=\\"0.25\\">error</text>
    <text x=\\"413\\" y=\\"138\\" textLength=\\"274\\">error</text>
  </g>
  
</svg>"
`;

exports[`action-badges /:owner/:repo returns an "unknown" badge on private repos that return a 404 1`] = `
"<svg width=\\"97\\" height=\\"20\\" viewBox=\\"0 0 970 200\\" xmlns=\\"http://www.w3.org/2000/svg\\">
  <linearGradient id=\\"a\\" x2=\\"0\\" y2=\\"100%\\">
    <stop offset=\\"0\\" stop-opacity=\\".1\\" stop-color=\\"#EEE\\"/>
    <stop offset=\\"1\\" stop-opacity=\\".1\\"/>
  </linearGradient>
  <mask id=\\"m\\"><rect width=\\"970\\" height=\\"200\\" rx=\\"30\\" fill=\\"#FFF\\"/></mask>
  <g mask=\\"url(#m)\\">
    <rect width=\\"368\\" height=\\"200\\" fill=\\"#555\\"/>
    <rect width=\\"602\\" height=\\"200\\" fill=\\"#999\\" x=\\"368\\"/>
    <rect width=\\"970\\" height=\\"200\\" fill=\\"url(#a)\\"/>
  </g>
  <g fill=\\"#fff\\" text-anchor=\\"start\\" font-family=\\"Verdana,DejaVu Sans,sans-serif\\" font-size=\\"110\\">
    <text x=\\"60\\" y=\\"148\\" textLength=\\"268\\" fill=\\"#000\\" opacity=\\"0.25\\">build</text>
    <text x=\\"50\\" y=\\"138\\" textLength=\\"268\\">build</text>
    <text x=\\"423\\" y=\\"148\\" textLength=\\"502\\" fill=\\"#000\\" opacity=\\"0.25\\">unknown</text>
    <text x=\\"413\\" y=\\"138\\" textLength=\\"502\\">unknown</text>
  </g>
  
</svg>"
`;

exports[`action-badges /:owner/:repo returns some SVG code 1`] = `
"<svg width=\\"88.6\\" height=\\"20\\" viewBox=\\"0 0 886 200\\" xmlns=\\"http://www.w3.org/2000/svg\\">
  <linearGradient id=\\"a\\" x2=\\"0\\" y2=\\"100%\\">
    <stop offset=\\"0\\" stop-opacity=\\".1\\" stop-color=\\"#EEE\\"/>
    <stop offset=\\"1\\" stop-opacity=\\".1\\"/>
  </linearGradient>
  <mask id=\\"m\\"><rect width=\\"886\\" height=\\"200\\" rx=\\"30\\" fill=\\"#FFF\\"/></mask>
  <g mask=\\"url(#m)\\">
    <rect width=\\"368\\" height=\\"200\\" fill=\\"#555\\"/>
    <rect width=\\"518\\" height=\\"200\\" fill=\\"#3C1\\" x=\\"368\\"/>
    <rect width=\\"886\\" height=\\"200\\" fill=\\"url(#a)\\"/>
  </g>
  <g fill=\\"#fff\\" text-anchor=\\"start\\" font-family=\\"Verdana,DejaVu Sans,sans-serif\\" font-size=\\"110\\">
    <text x=\\"60\\" y=\\"148\\" textLength=\\"268\\" fill=\\"#000\\" opacity=\\"0.25\\">build</text>
    <text x=\\"50\\" y=\\"138\\" textLength=\\"268\\">build</text>
    <text x=\\"423\\" y=\\"148\\" textLength=\\"418\\" fill=\\"#000\\" opacity=\\"0.25\\">passing</text>
    <text x=\\"413\\" y=\\"138\\" textLength=\\"418\\">passing</text>
  </g>
  
</svg>"
`;
